--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/js": "^7.4.47",
     "core-js": "^3.6.5",
     "pinia": "^2.1.7",
     "vue": "^3.0.0",
